Initial setup - shopify embedded app working example

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,7 @@ DB_HOST=localhost
 DB_PORT=5432
 
 SENTRY_DSN=your-unique-sentry-project-link
+
+SHOPIFY_APP_NAME='your-shopify-app-name'
+SHOPIFY_APP_API_KEY=your-shopify-client-id
+SHOPIFY_APP_API_SECRET=your-shopify-client-secret
