--- a/requirements/requirements.in
+++ b/requirements/requirements.in
@@ -4,4 +4,7 @@ psycopg2-binary==2.9.6
 whitenoise==6.4.0
 sentry-sdk==1.18.*
 Pillow==9.5.*
-django-tailwind==3.5.*  
+django-tailwind==3.5.*
+git+https://github.com/farhanmasud/django-shopify-auth.git
+ShopifyAPI==12.3.0
+ua-parser==0.18.0
