--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-venv
+venv/
 __pycache__/
 *.pyc
 requirements/*.txt
-.env
+*.env
 media/
 staticfiles/
-theme/static_src/node_modules
-static/packages/node_modules
-static/packages/build
+ostad-shopify-app-assignment-1/theme/static_src/node_modules
+ostad-shopify-app-assignment-1/static/packages/node_modules
+ostad-shopify-app-assignment-1/static/packages/build
