--- a/ostad-shopify-app-assignment-2/requirements/requirements.in
+++ b/ostad-shopify-app-assignment-2/requirements/requirements.in
@@ -9,4 +9,6 @@ git+https://github.com/farhanmasud/django-shopify-auth.git
 ShopifyAPI==12.3.0
 ua-parser==0.18.0
 django-crispy-forms==2.1
-crispy-tailwind==0.5.0
+# git+https://github.com/django-crispy-forms/crispy-tailwind.git
+crispy-bootstrap4==2023.1
+# crispy-tailwind==0.5.0
